<resources>
    <string name="app_name">Bebop</string>
    <string name="login">Sign In</string>
    <string name="join">Join</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
