<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mjurewicz.bebop.JoinActivity"
    android:background="#2196F3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/tvAppName"
            android:textColor="#ffffff"
            android:textSize="75sp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#99ffffff"
            android:textSize="22sp"
            android:layout_marginTop="5dp"
            android:hint="@string/username"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#99ffffff"
            android:textSize="22sp"
            android:hint="@string/password"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#99ffffff"
            android:textSize="22sp"
            android:hint="@string/email"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:text="@string/join"
            android:id="@+id/bJoin"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
