<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="#2196F3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/tvAppName"
            android:textColor="#ffffff"
            android:textSize="75sp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"/>

        <Button
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:text="@string/login"
            android:id="@+id/bLogin"
            android:background="@drawable/button_shape"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:text="@string/join"
            android:id="@+id/bJoin"
            android:background="@drawable/button_shape"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
